--- a/package.json
+++ b/package.json
@@ -27,22 +27,26 @@
             "@nestjs/mapped-types": "^0.3.0",
             "@nestjs/platform-express": "^8.0.5",
             "@nestjs/schedule": "^0.4.3",
+            "@nestjs/typeorm": "^8.0.1",
             "axios": "^0.21.1",
             "bcrypt": "^5.0.0",
             "compression": "^1.7.4",
             "cookie": "^0.4.1",
             "cookie-parser": "^1.4.5",
             "flat": "^5.0.2",
+            "googleapis": "^83.0.0",
             "helmet": "^4.4.1",
             "i18n": "^0.13.2",
             "joi": "^17.4.0",
             "jsonwebtoken": "^8.5.1",
             "morgan": "^1.10.0",
+            "mysql2": "^2.2.5",
             "redis": "3.1.2",
             "reflect-metadata": "^0.1.13",
             "rimraf": "^3.0.2",
             "rxjs": "^6.6.3",
             "rxjs-compat": "^6.6.3",
+            "typeorm": "^0.2.36",
             "uuid": "^8.3.2",
             "winston": "^3.3.3"
       },
