--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
             "@nestjs/core": "^7.6.12",
             "@nestjs/jwt": "^7.2.0",
             "@nestjs/mapped-types": "^0.3.0",
-            "@nestjs/platform-express": "^8.0.5",
+            "@nestjs/platform-express": "7.6.17",
             "@nestjs/schedule": "^0.4.3",
             "axios": "^0.21.1",
             "bcrypt": "^5.0.0",
@@ -38,6 +38,7 @@
             "joi": "^17.4.0",
             "jsonwebtoken": "^8.5.1",
             "morgan": "^1.10.0",
+            "nestjs": "^0.0.1",
             "redis": "3.1.2",
             "reflect-metadata": "^0.1.13",
             "rimraf": "^3.0.2",
